--- a/TestAppProjekt/TestAppProjekt/TestAppProjekt.csproj
+++ b/TestAppProjekt/TestAppProjekt/TestAppProjekt.csproj
@@ -46,6 +46,7 @@
     <Compile Include="View\EmployeesPage.xaml.cs">
       <DependentUpon>EmployeesPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\EmployeeTabbedRoot.cs" />
     <Compile Include="View\EmployeeView.xaml.cs">
       <DependentUpon>EmployeeView.xaml</DependentUpon>
     </Compile>
