--- a/TestAppProjekt/TestAppProjekt/TestAppProjekt.csproj
+++ b/TestAppProjekt/TestAppProjekt/TestAppProjekt.csproj
@@ -47,8 +47,17 @@
       <DependentUpon>EmployeesPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\EmployeeTabbedRoot.cs" />
-    <Compile Include="View\EmployeeView.xaml.cs">
-      <DependentUpon>EmployeeView.xaml</DependentUpon>
+    <Compile Include="View\EmployeeViewGeneral.xaml.cs">
+      <DependentUpon>EmployeeViewGeneral.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EmployeeViewInfo.xaml.cs">
+      <DependentUpon>EmployeeViewInfo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EmployeeViewProjects.xaml.cs">
+      <DependentUpon>EmployeeViewProjects.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EmployeeViewSkills.xaml.cs">
+      <DependentUpon>EmployeeViewSkills.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\HomeScreen.xaml.cs">
       <DependentUpon>HomeScreen.xaml</DependentUpon>
@@ -118,7 +127,25 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="View\EmployeeView.xaml">
+    <EmbeddedResource Include="View\EmployeeViewGeneral.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\EmployeeViewSkills.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\EmployeeViewProjects.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\EmployeeViewInfo.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
